--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
