--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "deploy": "npm run build && firebase deploy --only hosting"
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
+    "@supabase/supabase-js": "^2.91.1",
     "clsx": "^2.1.1",
     "firebase": "^12.8.0",
     "firebase-admin": "^13.6.0",
