--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy",
+    "deploy:supabase": "supabase functions deploy manage-coupons --no-verify-jwt && supabase functions deploy checkout-coupon --no-verify-jwt"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
