--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
         "./supabase/functions/manage-coupons"
     ],
     "imports": {
-        "supabase": "https://esm.sh/@supabase/supabase-js@2",
-        "jose": "https://deno.land/x/jose@v4.14.4/index.ts"
+        "supabase": "npm:@supabase/supabase-js@2",
+        "jose": "npm:jose@4"
     }
 }
