--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "deploy": "npm run build && firebase deploy",
-    "deploy:supabase": "supabase functions deploy manage-coupons --no-verify-jwt && supabase functions deploy checkout-coupon --no-verify-jwt"
+    "deploy:supabase": "npx supabase functions deploy manage-coupons --no-verify-jwt && npx supabase functions deploy checkout-coupon --no-verify-jwt"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
